[tool.poetry]
name = "langchain-chatbot"
version = "0.1.0"
description = "Langchain Chatbot"
authors = ["Tristan de Boer <info@tristandeboer.nl>"]
readme = "README.md"
packages = [{include = "langchain_chatbot"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.64"
beautifulsoup4 = "^4.12.1"
weaviate-client = "^3.15.4"
openai = "^0.27.4"
black = "^23.3.0"
isort = "^5.12.0"
flask = "^2.2.3"
transformers = "^4.27.4"
gradio = "3.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
